2010-07-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.y: fixed bug 1579664
	* support/regression/tests/bug1579664.c: new, added

2010-07-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCerr.c,
	* src/SDCCerr.h
	* src/SDCCglue.c (printIvalCharPtr),
	* src/SDCCicode.c (geniCodeCast): changed E_LITERAL_GENERIC and
	  E_NONPTR2_GENPTR to warnings
	* support/regression/tests/bug1115321.c: fixed problem on solaris
	* support/regression/tests/literalop.c: only test char overflow on SDCC

2010-07-29 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/literalop.c:
	  fixed regresssion test failure on host targat (gcc -O2):
	  the test result was udefined by C standard 6.6 #5 and
	  implementation dependent, so it was removed.
	  Thanks to Jan Waclawek for the explanation that it is not a gcc bug.

2010-07-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/printf_large.c: small optimization
	* src/hc08/gen.c (transferRegReg, genPointerGet): fixed bug 1115321
	* src/hc08/ralloc.c: cosmetic changes
	* src/pic16/glue.c (pic16emitStaticSeg),
	* src/SDCCglue.c (emitStaticSeg): fixed bug 1474589
	* src/z80/gen.c: fixed some warnings
	* support/regression/tests/bug1115321.c: new, added

2010-07-26 Borut Razem <borut.razem AT siol.net>

	* src/SDCCutil.c:
	  applied patch #3034715: Report correct host for x86_64 Macs,
	  thanks to Patrik Persson

2010-07-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/main.c,
	  support/regression/tests/float_single.c:
	  Fixed #3027961.

2010-07-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed #3027961.

2010-07-25 Borut Razem <borut.razem AT siol.net>

	* src/SDCCerr.c, src/SDCCerr.h, src/SDCC.y, src/SDCC.lex,
	  src/SDCCast.c, src/SDCCast.h, device/include/stddef.h,
	  device/include/pic16/stddef.h, support/regression/tests/zeropad.c,
	  support/regression/tests/offsetof.c:
	  applied patch #2801126: __builtin_offsetof implementation,